# LMN-3-Emulator

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linting.yaml  pull_request.yaml  release.yaml
Source/: Main.cpp  MainComponent.cpp  MainComponent.h  MidiMappings.h
Source/ButtonKeyboard/: ButtonKeyboard.cpp  ButtonKeyboard.h
Source/Encoder/: Encoder.cpp  Encoder.h
Source/LookAndFeel/: EmulatorLookAndFeel.cpp  EmulatorLookAndFeel.h
